--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -8,7 +8,7 @@ canvas {
 }
 </style>
 </head>
-<body onload="startGame()"><b style="color:#ffe599ff;">MMMMMMMMMMMMMMMM</b>
+<body onload="startGame()">
 <button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()"><-</button>
 <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">-></button>
 <script>
