--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -50,10 +50,11 @@ var Rations = sessionStorage.getItem("Rations");
 var FPD = sessionStorage.getItem("FPD");
 var myGamePiece;
 var myObstacle;
+var backround;
 
 function startGame() {
     myGamePiece = new component(131, 96, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/wagon.png", 10, 120, "image");
-    myObstacle = new component(32, 24, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/rock.png", 10, 120, "image")
+    backround = new component(131, 96, "https://0038509gd.guthub.io/Greg.com/Gregames/OregonTrail/Images/Background.png", 10, 120, "image");
     myGameArea.start();
 }
 
