--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -4,12 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
 canvas {
-    background-color: #48afffff;
+    background-color: #fff2ccff;
 }
 </style>
 </head>
 <body onload="startGame()">
-<button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()"><-</button>
+<button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()"><-</button><br>
 <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">-></button>
 <script>
 var I = sessionStorage.getItem("I");
