--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -9,7 +9,7 @@ canvas {
 </style>
 </head>
 <body onload="startGame()">
-<button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()"><-</button><br>
+<button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()"><-</button>
 <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">-></button>
 <script>
 var I = sessionStorage.getItem("I");
