--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -110,7 +110,7 @@ function component(width, height, color, x, y, type) {
 }
 function updateGameArea() {
     myGameArea.clear();
-    myObstacle.update();
+    backround.update();
     myGamePiece.newPos();
     myGamePiece.update();
 }
