--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -508,6 +508,9 @@ function updateGameArea() {
     myObstacle133.update();
     myObstacle134.update();
     myObstacle135.update();
+    myObstical1.speedY = -1;
+    myobstical2.speedY = -1;
+    myobstical
     myGamePiece.newPos();
     myGamePiece.update();
 }
