--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -47,8 +47,8 @@ var FPD = sessionStorage.getItem("FPD");
 var myGamePiece;
 var myObstacle;
 function startGame() {
-    myGamePiece = new component(131, 96, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/wagon.png", randint(0, 1350), 10, "image");
-    myObstacle = new component(65, 48, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/rock.png", randint(0, 1350), 20, "image");
+    myGamePiece = new component(131, 96, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/wagon.png", 10, 120, "image");
+    myObstacle = new component(65, 48, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/rock.png", 20, 120, "image");
     myGameArea.start();
 }
 var myGameArea = {
