--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <style>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"/><style>
 canvas {
     background-color: #48afffff;
+    position: center;
 }
 </style></head><body onload="startGame()">
 <button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()"><-</button>
