--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"/><style>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"/><b style="color:#fff2ccff;">mmmmmm musketeers improvements</b><style>
 canvas {
     background-color: #48afffff;
     position: center;
