--- a/Gregames/OregonTrail/ColumbiaRiver2.html
+++ b/Gregames/OregonTrail/ColumbiaRiver2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"/><b style="color:#fff2ccff;">mmmmmm musketeers improvements</b><style>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"/><style>
 canvas {
     background-color: #48afffff;
     position: center;
@@ -46,21 +46,31 @@ var FPD = sessionStorage.getItem("FPD");
 var myGamePiece;
 var myObstacle;
 var Randomizer;
+var hight = 10;
+var leftFrame;
+var rightFrame;
 function startGame() {
     myGamePiece = new component(131, 96, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/wagon.png", 10, 120, "image");
-    myObstacle = new component(65, 48, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/rock.png", 10, 120, "image");
+    leftFrame = new component(450, 540, #fff2ccff, 0, 0, "border");
+    rightFrame = new component(450, 540, #fff2ccff, 900, 0, "border");
+    for(var loop = 0; loop < 135; loop ++) {
+        Randomizer = randint(, );
+        myObstacle = new component(65, 48, "https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Images/rock.png", hight, Randomizer, "image");
+        hight += 10;
+    }
     myGameArea.start();
 }
 var myGameArea = {
     canvas : document.createElement("canvas"),
     start : function() {
-        this.canvas.width = 675;
+        this.canvas.width = 1350;
         this.canvas.height = 540;
         this.context = this.canvas.getContext("2d");
         document.body.insertBefore(this.canvas, document.body.childNodes[0]);
         this.frameNo = 0;
         this.interval = setInterval(updateGameArea, 20);
         },
+    
     clear : function() {
         this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
     },
