--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -4,11 +4,11 @@ Password --> <input type="text" id="password">
 <button onclick="login();">Log_In</button>
 <script>
 function login() {
-  sessionStorage.setItem("Name", document.getElementById('username').value;);
-  if (document.getElementById('password').value; === "") {
-    window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat/');
-  } else if (document.getElementById('username').value; === "Anonymous") {
-    window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat/Anonymous');
+  if (document.getElementById('password').value; === "greg" && document.getElementById('username').value; === "greg") {
+    sessionStorage.setItem("name", "Greg");
+    window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
+  } else {
+    alert("Invalid_Username/Password");
   }
 }
 document.body.style.background = "black";
