--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -6,7 +6,7 @@ Password --> <input type="text" id="password">
 function login() {
   if (document.getElementById('password').value; === "greg" && document.getElementById('username').value; === "greg") {
     sessionStorage.setItem("name", "Greg");
-    window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
+    windows.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
   } else {
     alert("Invalid_Username/Password");
   }
