--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -4,7 +4,7 @@ Password --> <input type="text" id="password">
 <button onclick="login();">Log_In</button>
 <script>
 function login() {
-  if (document.getElementById('password').value; === "greg" && document.getElementById('username').value; === "greg") {
+  if (document.getElementById('password').value; == greg && document.getElementById('username').value; == greg) {
     sessionStorage.setItem("name", "Greg");
     windows.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
   } else {
