--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -5,7 +5,7 @@ Password --> <input type="text" id="password">
 <script>
 function login() {
     sessionStorage.setItem("name", "Greg");
-    windows.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
+    window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
 }
 document.body.style.background = "black";
 </script></body></html>
