--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><body style="color:Green;font-size:25px;">
-Username --> <input type="text" id="username">
-Password --> <input type="text" id="password">
+Username --> <input type="text" id="username"><br>
+Password --> <input type="text" id="password"><br>
 <button onclick="login();">Log_In</button>
 <script>
 function login() {
