--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -4,8 +4,12 @@ Password --> <input type="text" id="password"><br>
 <button onclick="login();">Log_In</button>
 <script>
 function login() {
-    sessionStorage.setItem("name", "Greg");
+    var U = document.getElementById('username').value();
+    var P = document.getElementById('password').value();
+    if () {
+    sessionStorage.setItem("name", U);
     window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
+    }
 }
 document.body.style.background = "black";
 </script></body></html>
