--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -6,7 +6,7 @@ Password --> <input type="text" id="password"><br>
 function login() {
     var U = document.getElementById('username').value();
     var P = document.getElementById('password').value();
-    if () {
+    if (true) {
     sessionStorage.setItem("name", U);
     window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
     }
