--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html><html><body style="color:Green;font-size:25px;">
-Username --> <input type="text" id="username"><br>
-Password --> <input type="text" id="password"><br>
+Username (<input type="text" id="username">)<br>
+Password (<input type="text" id="password">)<br>
 <button onclick="login();">Log_In</button>
 <script>
 function login() {
-    var U = document.getElementById('username').value();
-    var P = document.getElementById('password').value();
-    sessionStorage.setItem("name", U);
-    window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
+    var U = document.getElementById('username').value;
+    var P = document.getElementById('password').value;
+    if (U = {[HOST/ADMIN]} && P = Npc@I9B3) {
+        sessionStorage.setItem("name", "Greg");
+        window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
+    } else {
+        alert("Invalid_Username/Password");
+    }
 }
 document.body.style.background = "black";
 </script></body></html>
