--- a/Greg-Chat/index.html
+++ b/Greg-Chat/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;font-size:15px;">
-<h style="font-size:50px;">Welcom_To_"This-Chat"!</h><br>
+<h style="font-size:50px;">Welcom_To-"This-Chat"!</h><br>
 <input type="text" id="message"><button onclick="send();">Enter</button>
 <p id="history"></p>
 <script>
@@ -13,6 +13,7 @@ function send() {
   } else {
     h += name + document.getElementById('message').value; + "<br>";
     localStorage.setItem("history", h);
+    document.getElementById('history').innerHTML = h;
   }
 }
 basic.forever(function () {
