--- a/Greg-Chat/index.html
+++ b/Greg-Chat/index.html
@@ -20,4 +20,5 @@ while (true) {
   var h = localStorage.getItem("history");
   document.getElementById('history').innerHTML = h;
 }
+document.body.style.background = "black";
 </script></body></html>
