--- a/Greg-Chat/index.html
+++ b/Greg-Chat/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;font-size:15px;">
+<title>Student On Task - Please Be On Task</title>
 <h style="font-size:50px;">Welcom_To-"This-Chat"!</h><br>
 <input type="text" id="message"><button onclick="send();">Enter</button>
 <p id="history"></p>
