--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;font-size:25px;">
+<title>Student On Task - Please Be On Task</title>
 Username (<input type="text" id="username">)<br>
 Password (<input type="text" id="password">)<br>
 <button onclick="login();">Log_In</button>
