--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -164,6 +164,7 @@ loops.everyInterval(24000, function () {
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/ColumbiaRiver1");
     }
   }
+  pause(24000);
   if (Wheather = "cold" && Clothing < 5) {
     HealthNum += Clothing - 5;
   } else if (Wheather = "very-cold" && Clothing < 10) {
