--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -10,7 +10,7 @@ function login() {
     if (U == "{[HOST/ADMIN]}" && P == "Npc@I9B3") {
         sessionStorage.setItem("name", "Greg");
         var a = false;
-        sessionStorage.setItem("banned", b);
+        sessionStorage.setItem("banned", a);
         window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
     } else {
         alert("Invalid_Username/Password");
