--- a/Greg-Chat/index.html
+++ b/Greg-Chat/index.html
@@ -21,5 +21,6 @@ forever(function a() {
   document.getElementById('history').innerHTML = h;
 
 })
+</script><script>
 document.body.style.background = "black";
 </script></body></html>
