--- a/Greg-Chat/index.html
+++ b/Greg-Chat/index.html
@@ -12,8 +12,12 @@ function send() {
   if (Banned == "N") {
     h += name + document.getElementById('message').value; + "<br>";
     localStorage.setItem("history", h);
-  } else {
+  } else if (Banned == "Y"){
     alert("You_Have_Ben_Banned!-You_May_Not_Post_Messages!");
+  } else {
+    if (confirm(You_Are_Not_Logged_In.-Please_Return_To_Login_Page);){
+      window.location.assign("https://0039509gd.github.io/Greg.com/Greg-Chat/Log-in");
+    }
   }
 }
 forever(function a() {
