--- a/Greg-Chat/Log-in.html
+++ b/Greg-Chat/Log-in.html
@@ -8,8 +8,7 @@ function login() {
     var U = document.getElementById('username').value;
     var P = document.getElementById('password').value;
     if (U == "{[HOST/ADMIN]}" && P == "Npc@I9B3") {
-        sessionStorage.setItem("name", "Greg");
-        sessionStorage.setItem("banned", "N");
+        localStorage.setItem("name", "Greg");
         window.location.assign('https://0038509gd.github.io/Greg.com/Greg-Chat');
     } else {
         alert("Invalid_Username/Password");
