--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -9,54 +9,54 @@
 <button onclick="Day();">5</button> Whait_To_See_If_Conditions_Improove
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Fording-Explained"><button>4</button></a> Find_Out_What_These_Options_Mean<br>
 <script>
-var I = sessionStorage.getItem("I");
-var Idied = sessionStorage.getItem("Idied");
-var Isick = sessionStorage.getItem("Isick");
-var W = sessionStorage.getItem("W");
-var Wdied = sessionStorage.getItem("Wdied");
-var Isick = sessionStorage.getItem("Wsick");
-var K1 = sessionStorage.getItem("K1");
-var K1died = sessionStorage.getItem("K1died");
-var K1sick = sessionStorage.getItem("K1sick");
-var K2 = sessionStorage.getItem("K2");
-var K2died = sessionStorage.getItem("K2died");
-var K2sick = sessionStorage.getItem("k2sick");
-var K3 = sessionStorage.getItem("K3");
-var K3died = sessionStorage.getItem("K3died");
-var K3sick = sessionStorage.getItem("K3sick");
-var job = sessionStorage.getItem("job");
-var money = sessionStorage.getItem("money");
-var Oxen = sessionStorage.getItem("Oxen");
-var Foodlb = sessionStorage.getItem("Foodlb");
+var I = localStorage.getItem("I");
+var Idied = localStorage.getItem("Idied");
+var Isick = localStorage.getItem("Isick");
+var W = localStorage.getItem("W");
+var Wdied = localStorage.getItem("Wdied");
+var Isick = localStorage.getItem("Wsick");
+var K1 = localStorage.getItem("K1");
+var K1died = localStorage.getItem("K1died");
+var K1sick = localStorage.getItem("K1sick");
+var K2 = localStorage.getItem("K2");
+var K2died = localStorage.getItem("K2died");
+var K2sick = localStorage.getItem("k2sick");
+var K3 = localStorage.getItem("K3");
+var K3died = localStorage.getItem("K3died");
+var K3sick = localStorage.getItem("K3sick");
+var job = localStorage.getItem("job");
+var money = localStorage.getItem("money");
+var Oxen = localStorage.getItem("Oxen");
+var Foodlb = localStorage.getItem("Foodlb");
   document.getElementById('Foodlb').innerHTML = Foodlb;
-var Clothing = sessionStorage.getItem("Clothing");
-var Ammo = sessionStorage.getItem("Ammo");
-var Axels = sessionStorage.getItem("Axels");
-var Toungues = sessionStorage.getItem("Toungues");
-var Wheels = sessionStorage.getItem("Wheels");
-var Day = sessionStorage.getItem("Day");
-var Month = sessionStorage.getItem("Month");
-var Year = sessionStorage.getItem("Year");
-var Wheather = sessionStorage.getItem("Wheather");
+var Clothing = localStorage.getItem("Clothing");
+var Ammo = localStorage.getItem("Ammo");
+var Axels = localStorage.getItem("Axels");
+var Toungues = localStorage.getItem("Toungues");
+var Wheels = localStorage.getItem("Wheels");
+var Day = localStorage.getItem("Day");
+var Month = localStorage.getItem("Month");
+var Year = localStorage.getItem("Year");
+var Wheather = localStorage.getItem("Wheather");
   document.getElementById('Wheather').innerHTML = Wheather;
-var Health = sessionStorage.getItem("Health");
+var Health = localStorage.getItem("Health");
   document.getElementById('Health').innerHTML = Health;
-var HealthNum = sessionStorage.getItem("HealthNum");
-var miles2LM = sessionStorage.getItem("milesLM");
+var HealthNum = localStorage.getItem("HealthNum");
+var miles2LM = localStorage.getItem("milesLM");
   document.getElementById('miles2LM').innerHTML = miles2LM;
-var milesD = sessionStorage.getItem("milesD");
+var milesD = localStorage.getItem("milesD");
   document.getElementById('milesD').innerHTML = milesD;
-var Pace = sessionStorage.getItem("Pace");
-var hr = sessionStorage.getItem("hr");
-var Rations = sessionStorage.getItem("Rations");
-var FPD = sessionStorage.getItem("FPD");
-if (sessionStorage.getItem("River") = "Kanses") {
+var Pace = localStorage.getItem("Pace");
+var hr = localStorage.getItem("hr");
+var Rations = localStorage.getItem("Rations");
+var FPD = localStorage.getItem("FPD");
+if (localStorage.getItem("River") = "Kanses") {
   var Depth = 3.5;
-} else if (sessionStorage.getItem("River") = "BigBlue") {
+} else if (localStorage.getItem("River") = "BigBlue") {
   var Depth = 2.2;
-} else if (sessionStorage.getItem("River") = "Green") {
+} else if (localStorage.getItem("River") = "Green") {
   var Depth = 5;
-} else if (sessionStorage.getItem("River") = "Snake") {
+} else if (localStorage.getItem("River") = "Snake") {
   var Depth = 5;
 }
 if (Wheather = "hot") {
@@ -379,36 +379,36 @@ function Day() {
   }
 }
 function Maintain() {
-  sessionStorage.setItem("Idied", Idied);
-  sessionStorage.setItem("Isick", Isick);
-  sessionStorage.setItem("Wdied", Wdied);
-  sessionStorage.setItem("Wsick", Wsick);
-  sessionStorage.setItem("K1died", K1died);
-  sessionStorage.setItem("K1sick", K1sick);
-  sessionStorage.setItem("K2died", K2died);
-  sessionStorage.setItem("K2sick", K2sick);
-  sessionStorage.setItem("K3died", K3died);
-  sessionStorage.setItem("K3sick", K3sick);
-  sessionStorage.setItem("Oxen", Oxen);
-  sessionStorage.setItem("Foodlb", Foodlb);
+  localStorage.setItem("Idied", Idied);
+  localStorage.setItem("Isick", Isick);
+  localStorage.setItem("Wdied", Wdied);
+  localStorage.setItem("Wsick", Wsick);
+  localStorage.setItem("K1died", K1died);
+  localStorage.setItem("K1sick", K1sick);
+  localStorage.setItem("K2died", K2died);
+  localStorage.setItem("K2sick", K2sick);
+  localStorage.setItem("K3died", K3died);
+  localStorage.setItem("K3sick", K3sick);
+  localStorage.setItem("Oxen", Oxen);
+  localStorage.setItem("Foodlb", Foodlb);
   document.getElementById('Foodlb').innerHTML = "Food:" + Foodlb + "pounds";
-  sessionStorage.setItem("Clothing", Clothing);
-  sessionStorage.setItem("Ammo", Ammo);
-  sessionStorage.setItem("Axels", Axels);
-  sessionStorage.setItem("Toungues", Toungues);
-  sessionStorage.setItem("Wheels", Wheels);
-  sessionStorage.setItem("Day", Day);
-  sessionStorage.setItem("Month", Month);
-  sessionStorage.setItem("Year", Year);
+  localStorage.setItem("Clothing", Clothing);
+  localStorage.setItem("Ammo", Ammo);
+  localStorage.setItem("Axels", Axels);
+  localStorage.setItem("Toungues", Toungues);
+  localStorage.setItem("Wheels", Wheels);
+  localStorage.setItem("Day", Day);
+  localStorage.setItem("Month", Month);
+  localStorage.setItem("Year", Year);
   document.getElementById('Date').innerHTML = "Date:" + Day + "th_Of_" + Month + "_in_" + Year;
-  sessionStorage.setItem("Wheather", Wheather);
+  localStorage.setItem("Wheather", Wheather);
   document.getElementById('Wheather').innerHTML = "Wheather:" + Wheather;
-  sessionStorage.setItem("Health", Health);
+  localStorage.setItem("Health", Health);
   document.getElementById('Health').innerHTML = "Health:" + Health;
-  sessionStorage.setItem("HealthNum", HealthNum);
-  sessionStorage.setItem("miles2LM", miles2LM);
+  localStorage.setItem("HealthNum", HealthNum);
+  localStorage.setItem("miles2LM", miles2LM);
   document.getElementById('miles2LM').innerHTML = "Next_Landmark" + miles2LM + "miles";
-  sessionStorage.setItem("milesD", milesD);
+  localStorage.setItem("milesD", milesD);
   document.getElementById('milesD').innerHTML = "Miles_Traveled:" + milesD + "miles";
 }
 function Fairy() {
@@ -476,7 +476,7 @@ function Ford() {
   window.location.assign("https://0038509gd.github.io/Greg.com/Gregame/OregonTrail");
 }
 function IndianGuide() {
-  if (sessionStorage.getItem("River") = "Snake") {
+  if (localStorage.getItem("River") = "Snake") {
     if (confirm("An_Indian_Has_Agreed_To_Guide_Your_Wagon_Across_The_River_For_3_Sets_Of_Clothing.-Do_You_Accept?")) {
       Clothing -= 3;
       Maintain();
