--- a/Gregames/OregonTrail/Segment-Attempt-To-Trade.html
+++ b/Gregames/OregonTrail/Segment-Attempt-To-Trade.html
@@ -5,21 +5,21 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Return</button></a>
 <script>
 var Tradable = false;
-var money = sessionStorage.getItem("money");
+var money = localStorage.getItem("money");
   document.getElementById('money').innerHTML = "money: " + money;
-var Oxen = sessionStorage.getItem("Oxen");
+var Oxen = localStorage.getItem("Oxen");
   document.getElementById('Oxen').innerHTML = "Oxen: " + Oxen;
-var Foodlb = sessionStorage.getItem("Foodlb");
+var Foodlb = localStorage.getItem("Foodlb");
   document.getElementById('Foodlb').innerHTML = "Pounds_Of_Food:" + Foodlb;
-var Clothing = sessionStorage.getItem("Clothing");
+var Clothing = localStorage.getItem("Clothing");
   document.getElementById('Clothing').innerHTML = "Sets_Of_Clothing:" + Clothing;
-var Ammo = sessionStorage.getItem("Ammo");
+var Ammo = localStorage.getItem("Ammo");
   document.getElementById('Ammo').innerHTML = "Bullets:" + Ammo;
-var Axels = sessionStorage.getItem("Axels");
+var Axels = localStorage.getItem("Axels");
   document.getElementById('Axels').innerHTML = "Wagon_Axels:" + Axels;
-var Toungues = sessionStorage.getItem("Toungues");
+var Toungues = localStorage.getItem("Toungues");
   document.getElementById('Toungues').innerHTML = "Wagon_Toungues:" + Toungues;
-var Wheels = sessionStorage.getItem("Wheels");
+var Wheels = localStorage.getItem("Wheels");
   document.getElementById('Wheels').innerHTML = "Wagon_Wheels:" + Wheels;
 if (Math.percentChance(50)) {
   var Randomizer = randint(1, 8);
@@ -164,14 +164,14 @@ function Trade() {
       money += numTraded;
     }
   }
-  sessionStorage.setItem("Oxen", Oxen);
-  sessionStorage.setItem("Foodlb", Foodlb);
-  sessionStorage.setItem("Clothing", Clothing);
-  sessionStorage.setItem("Ammo", Ammo);
-  sessionStorage.setItem("Axels", Axels);
-  sessionStorage.setItem("Toungues", Toungues);
-  sessionStorage.setItem("Wheels", Wheels);
-  sessionStorage.setItem("money", money);
+  localStorage.setItem("Oxen", Oxen);
+  localStorage.setItem("Foodlb", Foodlb);
+  localStorage.setItem("Clothing", Clothing);
+  localStorage.setItem("Ammo", Ammo);
+  localStorage.setItem("Axels", Axels);
+  localStorage.setItem("Toungues", Toungues);
+  localStorage.setItem("Wheels", Wheels);
+  localStorage.setItem("money", money);
   window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu");
 }
 </script></body2></body1></html><script>
